<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AirVIPAppMobile</string>
    <string name="se_connecter">Se connecter</string>
    <string name="adresse_courriel">Adresse courriel</string>
    <string name="connexion">Connexion</string>
    <string name="logo">Logo</string>
    <string name="veuillez_entrer_vos_informations">Veuillez entrer vos informations</string>
    <string name="bienvenue">Bienvenue</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="s_inscrire">S’inscrire</string>
    <string name="logo_air_vip">Logo Air VIP</string>

    <string name="date_de_naissance_jj_mm_aaaa_inscription">Date de naissance (JJ/MM/AAAA)</string>
    <string name="confirmer_le_mot_de_passe_inscription">Confirmer le mot de passe</string>
    <string name="adresse_courriel_inscription">Adresse courriel</string>
    <string name="prenom_inscription">Prénom</string>
    <string name="nom_inscription">Nom</string>
    <string name="mot_de_passe_inscription">Mot de passe</string>
    <string name="numero_de_telephone_inscription">Numéro de téléphone</string>
    <string name="s_inscrire_inscription">S’inscrire</string>
    <string name="creer_un_compte_inscription">Créer un compte</string>
    <string name="j_ai_deja_un_compte_inscription">J’ai déjà un compte</string>

    <string name="reserver_home">Réserver</string>
    <string name="parametres_home">Paramètres</string>
    <string name="statut_vol_home">Statut vol</string>
    <string name="voyages_home">Voyages</string>
    <string name="fleche_home">➡</string>
    <string name="date_de_depart_home">Date de départ</string>
    <string name="date_de_retour_home">Date de retour</string>
    <string name="rechercher_home">Rechercher</string>
    <string name="recent_home">Récents</string>
    <string name="vols_home">Vols</string>
    <string name="selectionner_la_date_de_depart_home">Sélectionner la date de départ</string>
    <string name="choisir_lieu_de_depart_home">Choisir lieu de départ</string>
    <string name="choisir_lieu_depart_home">Choisir lieu d’arrivée</string>
    <string name="aller_retour_home">Aller / Retour</string>
    <string name="recherche_home">Rechercher</string>
    <string name="todo">À compléter</string>

    <string name="statut_des_vols_FlightStatus">Statut des vols</string>
    <string name="parametres_de_l_application_settings">Paramètres de l’application</string>
    <string name="mes_voyages_reserves_trips">Mes voyages réservés</string>

    <string name="mode_sombre_parametre">Mode sombre</string>
    <string name="notifications_parametre">Notifications</string>
    <string name="account_parametre">Account</string>
    <string name="logout_parametre">Logout</string>
    <string name="mon_compte_paramatre">Mon compte</string>
    <string name="langue_parametre">Langue</string>
    <string name="deconnexion_parametre">Déconnexion</string>
    <string name="francais_parametre">Français</string>
    <string name="page_mon_compte_compte">Page Mon Compte</string>
    <string name="lieu_de_depart_home">Lieu de départ</string>
    <string name="lieu_d_arrive_home">Lieu d\'arrivée</string>

    <!-- Ajout rayan  -->
    <string name="airvip_brand">AirVip</string>
    <string name="reserver_button">Réserver</string>
    <string name="icone_avion">Icône Avion</string>
    <string name="flight_route_time_format">%1$s ➡ %2$s | %3$s - %4$s</string>
    <string name="model_capacity_format">%1$s | %2$d passagers</string>
    <string name="services_label">Services VIP: %1$s</string>
    <string name="yul_cun_flightitem">YUL → CUN</string>
    <string name="_14_04_flightitem">14:04</string>
    <string name="logo_compagnie_flightitem">Logo compagnie</string>
    <string name="_13_30_flightitem">13:30</string>
    <string name="airvip_31_d_missions_flightitem">AirVip · 31% d’émissions</string>
    <string name="_1_escale_ywg_24_h_34_min_flightitem">1 escale à YWG - 24 h 34 min</string>
    <string name="_16_046_ca_flightitem">16 046 $CA</string>
    <string name="aller_retour_flightitem">aller-retour</string>
    <string name="escale_de_nuit_billets_s_par_s_flightitem">Escale de nuit · Billets séparés</string>
    <string name="aller_simple_home">Aller simple</string>
    <string name="modifier_le_profil_compte">Modifier le profil</string>
    <string name="deconnexion_compte">Déconnexion</string>
    <string name="prenom_compte">"Prenom : "</string>
    <string name="nom_compte">"Nom : "</string>
    <string name="numero_telephone_compte">Numero telephone :</string>
    <string name="email_compte">"Email : "</string>
    <string name="confirmation_confirmation">Confirmation</string>
    <string name="retour_l_accueil_confirmation">Retour à l’accueil</string>
    <string name="votre_paiement_a_t_confirm_confirmation">Votre paiement a été confirmé !</string>
    <string name="merci_pour_votre_r_servation_avec_airvip_confirmation">Merci pour votre réservation avec AirVIP </string>
    <string name="adresse_de_facturation_billng">Adresse de facturation</string>
    <string name="confirmer_billing">Confirmer</string>
    <string name="adresse_rue_num_ro_billing">Adresse (rue, numéro)</string>
    <string name="code_postal_billing">Code postal</string>
    <string name="nombilling">Nom</string>
    <string name="pays_billing">Pays</string>
    <string name="pr_nom_billing">Prénom</string>
    <string name="province_tat_billing">Province / État</string>
    <string name="t_l_phone_billing">Téléphone</string>
    <string name="ville_billing">Ville</string>
    <string name="arriv_e_flightstatus">Arrivée :</string>
    <string name="d_part_flightstatus">Départ :</string>
    <string name="date_flightstatus">Date :</string>

</resources>
