<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    android:background="@color/white">

    <!-- Logo -->
    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="361dp"
        android:layout_height="129dp"
        android:layout_gravity="start"
        android:contentDescription="@string/logo"
        android:src="@drawable/img"
        tools:ignore="ImageContrastCheck" />

    <!--  Bienvenue -->
    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bienvenue"
        android:textSize="24sp"
        android:textColor="#222222"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:gravity="center" />

    <!-- texte -->
    <TextView
        android:id="@+id/subText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/veuillez_entrer_vos_informations"
        android:textSize="14sp"
        android:textColor="#666666"
        android:layout_marginBottom="20dp"
        android:gravity="center" />

    <!-- Boutons connecter inscrire -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        tools:ignore="ExtraText">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/registerTabButton"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:background="@drawable/button_inscrire"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:padding="12dp"
            android:text="@string/s_inscrire"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            app:backgroundTint="#FFC107"
            tools:ignore="VisualLintButtonSize" />
        >


    </LinearLayout>

    <!-- Email -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/adresse_courriel"
        android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            tools:ignore="VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Mot de passe -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mot_de_passe"
        android:layout_marginTop="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            tools:ignore="VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- bouton de conexion -->
    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FFC107"
        android:elevation="6dp"
        android:padding="12dp"
        android:text="@string/connexion"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        tools:ignore="VisualLintButtonSize" />

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/logo_air_vip"
        android:src="@drawable/img_1"
        tools:ignore="ImageContrastCheck" />

</LinearLayout>